list size on mobile fix

--- a/css/list.css
+++ b/css/list.css
@@ -49,7 +49,7 @@
 
 @media (max-width: 767px) {
     .list__text {
-        max-width: 100px;
+        max-width: 130px;
     }
 }
 
